added category section

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,7 @@
 server.servlet.context-path=/api/
-spring.h2.console.enabled=true
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/shop
+spring.datasource.username=shop_user
+spring.datasource.password=mypass
+spring.jpa.hibernate.ddl-auto = update
 
