made it posible to remove items images and categories

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,4 @@ spring.datasource.username=shop_user
 spring.datasource.password=mypass
 spring.jpa.hibernate.ddl-auto = update
 
+server.error.include-message=always
