--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.servlet.context-path=/api/
 spring.datasource.url=jdbc:postgresql://localhost:5432/shop
 spring.datasource.username=postgres
 spring.datasource.password=root
-spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.ddl-auto = create
 
 #spring.datasource.url=jdbc:postgresql://ec2-54-73-90-195.eu-west-1.compute.amazonaws.com:5432/dbcl26s699if8t
 #spring.datasource.username=yajayedfrpemig
